--- a/u1/pom.xml
+++ b/u1/pom.xml
@@ -79,6 +79,11 @@
             <artifactId>xstream</artifactId>
             <version>1.4.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.mpatric</groupId>
+            <artifactId>mp3agic</artifactId>
+            <version>0.9.0</version>
+        </dependency>
     </dependencies>
 
 </project>
