--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/**/workspace.xml
+u1/target
+u1/.idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
 .idea
