--- a/u1/pom.xml
+++ b/u1/pom.xml
@@ -61,8 +61,6 @@
         </plugins>
     </build>
 
-
-
     <dependencies>
         <dependency>
             <groupId>org.apache.openjpa</groupId>
@@ -83,6 +81,11 @@
             <groupId>com.mpatric</groupId>
             <artifactId>mp3agic</artifactId>
             <version>0.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.8.11.1</version>
         </dependency>
     </dependencies>
 
